# kswitch

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  main.rs  operations.rs  schedule.rs  state.rs  theme.rs
src/get/: mod.rs  target_theme.rs
src/set/: color_scheme.rs  global_theme.rs  konsole.rs  mod.rs  wallpaper.rs
