[package]
name = "kswitch"
version = "1.0.0"
edition = "2024"
description = "A simple command line tool for light/dark theme switching in KDE Plasma."
license = "MIT"
repository = "https://github.com/Twonkular/kswitch"
homepage = "https://github.com/Twonkular/kswitch"
readme = "README.md"
keywords = ["theme", "switcher", "light", "dark", "kde", "Plasma", "manjaro"]
categories = ["command-line-utilities", "config"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
log = "0.4.29"
env_logger = "0.11"
rstest = "0.26.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.13.0", features = ["chrono"] }
toml = "0.8.23"
zbus = "5.7.1"
